--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   "autoload": {
     "files": [],
     "psr-4": {
-      "think\\": "library/think"
+      "think\\": "library/think/"
     }
   },
   "repositories": {
